--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "bson": "1.1.0",
     "debug": "3.2.6",
     "loopback-connector": "4.6.1",
-    "mongodb": "3.1.13",
+    "mongodb": "^5.0.0",
     "strong-globalize": "4.1.2"
   },
   "devDependencies": {
